--- a/application/mobile/view/user/import_online.html
+++ b/application/mobile/view/user/import_online.html
@@ -29,27 +29,27 @@
                 <!--填写信息-->
                 <p class="person_message">
                 	<label>姓名:</label>
-                	<span><input type="text" name="gene[name]" /></span>
+                	<span><input type="text" name="gene[name]" value='{:session("gene[name]","","mobile")}' /></span>
                 </p>
                 <p class="person_message">
                 	<label>民族:</label>
-                	<span><input type="text" name="gene[nation]" /></span>
+                	<span><input type="text" name="gene[nation]" value='{:session("gene[nation]","","mobile")}' /></span>
                 </p>
                 <p class="person_message">
                 	<label>现今地址:</label>
-                	<span><input type="text" name="gene[region]" /></span>
+                	<span><input type="text" name="gene[region]" value='{:session("gene[region]","","mobile")}' /></span>
                 </p>
                 <p class="person_message">
                 	<label>所属单倍群:</label>
-                	<span><input type="text" name="gene[haplogroup]" /></span>
+                	<span><input type="text" name="gene[haplogroup]" value='{:session("gene[haplogroup]","","mobile")}' /></span>
                 </p>
                 <p class="person_message">
                 	<label>SNP:</label>
-                	<span><input type="text" name="gene[variation]" /></span>
+                	<span><input type="text" name="gene[variation]" value='{:session("gene[variation]","","mobile")}' /></span>
                 </p>
                 <p class="person_message">
                 	<label>SNP excepted:</label>
-                	<span><input type="text" name="gene[nomutation]" /></span>
+                	<span><input type="text" name="gene[nomutation]" value='{:session("gene[nomutation]","","mobile")}' /></span>
                 </p>
                 <p class="person_message">
                 	<label>联系方式:</label>
@@ -83,9 +83,9 @@
 							<li>DYS389b</li>
 						</ul>
 						<ul class="xiala">
-							<li><input type="text" name="gene[dys19]" value=""/></li>
-							<li><input type="text" name="gene[dys389i]" value="" /></li>
-							<li><input type="text" name="gene[dys389b]" value="" /></li>
+							<li><input type="text" name="gene[dys19]" value='{:session("gene[dys19]","","mobile")}'li>
+							<li><input type="text" name="gene[dys389i]" value='{:session("gene[dys389i]","","mobile")}' /></li>
+							<li><input type="text" name="gene[dys389b]" value='{:session("gene[dys389b]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
 							<li>DYS390</li>
@@ -93,9 +93,9 @@
 							<li>DYS392</li>
 						</ul>
 						<ul class="xiala">
-							<li><input type="text" name="gene[dys390]" value="" /></li>
-							<li><input type="text" name="gene[dys391]" value="" /></li>
-							<li><input type="text" name="gene[dys392]" value="" /></li>
+							<li><input type="text" name="gene[dys390]" value='{:session("gene[dys390]","","mobile")}' /></li>
+							<li><input type="text" name="gene[dys391]" value='{:session("gene[dys391]","","mobile")}' /></li>
+							<li><input type="text" name="gene[dys392]" value='{:session("gene[dys392]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
                             <li>DYS393</li>
@@ -103,9 +103,9 @@
                             <li>DYS438</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[dys393]" value="" /></li>
-                            <li><input type="text" name="gene[dys437]" value="" /></li>
-                            <li><input type="text" name="gene[dys438]" value="" /></li>
+                            <li><input type="text" name="gene[dys393]" value='{:session("gene[dys393]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys437]" value='{:session("gene[dys437]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys438]" value='{:session("gene[dys438]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
                             <li>DYS439</li>
@@ -113,9 +113,9 @@
                             <li>DYS456</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[dys439]" value="" /></li>
-                            <li><input type="text" name="gene[dys448]" value="" /></li>
-                            <li><input type="text" name="gene[dys456]" value="" /></li>
+                            <li><input type="text" name="gene[dys439]" value='{:session("gene[dys439]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys448]" value='{:session("gene[dys448]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys456]" value='{:session("gene[dys456]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
                             <li>DYS458</li>
@@ -123,9 +123,9 @@
                             <li>GATA-H4</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[dys458]" value="" /></li>
-                            <li><input type="text" name="gene[dys635]" value="" /></li>
-                            <li><input type="text" name="gene[gata_h4]" value="" /></li>
+                            <li><input type="text" name="gene[dys458]" value='{:session("gene[dys458]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys635]" value='{:session("gene[dys635]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[gata_h4]" value='{:session("gene[gata_h4]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
                             <li>DYS385a</li>
@@ -133,9 +133,9 @@
                             <li>DYS449</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[dys385a]" value="" /></li>
-                            <li><input type="text" name="gene[dys385b]" value="" /></li>
-                            <li><input type="text" name="gene[dys449]" value="" /></li>
+                            <li><input type="text" name="gene[dys385a]" value='{:session("gene[dys385a]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys385b]" value='{:session("gene[dys385b]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys449]" value='{:session("gene[dys449]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
                             <li>DYS460</li>
@@ -143,9 +143,9 @@
                             <li>DYS518</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[dys460]" value="" /></li>
-                            <li><input type="text" name="gene[dys481]" value="" /></li>
-                            <li><input type="text" name="gene[dys518]" value="" /></li>
+                            <li><input type="text" name="gene[dys460]" value='{:session("gene[dys460]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys481]" value='{:session("gene[dys481]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys518]" value='{:session("gene[dys518]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
                             <li>DYS533</li>
@@ -153,9 +153,9 @@
                             <li>DYS576</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[dys533]" value="" /></li>
-                            <li><input type="text" name="gene[dys570]" value="" /></li>
-                            <li><input type="text" name="gene[dys576]" value="" /></li>
+                            <li><input type="text" name="gene[dys533]" value='{:session("gene[dys533]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys570]" value='{:session("gene[dys570]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys576]" value='{:session("gene[dys576]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
                             <li>DYS627</li>
@@ -163,9 +163,9 @@
                             <li>DYS387S1b</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[dys627]" value="" /></li>
-                            <li><input type="text" name="gene[dys387s1a]" value="" /></li>
-                            <li><input type="text" name="gene[dys387s1b]" value="" /></li>
+                            <li><input type="text" name="gene[dys627]" value='{:session("gene[dys627]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys387s1a]" value='{:session("gene[dys387s1a]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys387s1b]" value='{:session("gene[dys387s1b]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
                             <li>DYS388</li>
@@ -173,9 +173,9 @@
                             <li>DYS549</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[dys388]" value="" /></li>
-                            <li><input type="text" name="gene[dys444]" value="" /></li>
-                            <li><input type="text" name="gene[dys549]" value="" /></li>
+                            <li><input type="text" name="gene[dys388]" value='{:session("gene[dys388]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys444]" value='{:session("gene[dys444]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys549]" value='{:session("gene[dys549]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
                             <li>DYS643</li>
@@ -183,9 +183,9 @@
                             <li>DYS404S1a</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[dys643]" value="" /></li>
-                            <li><input type="text" name="gene[dys722]" value="" /></li>
-                            <li><input type="text" name="gene[dys404s1a]" value="" /></li>
+                            <li><input type="text" name="gene[dys643]" value='{:session("gene[dys643]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys722]" value='{:session("gene[dys722]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys404s1a]" value='{:session("gene[dys404s1a]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
                             <li>DYS404S1b</li>
@@ -193,9 +193,9 @@
                             <li>DYS527b</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[dys404s1b]" value="" /></li>
-                            <li><input type="text" name="gene[dys527a]" value="" /></li>
-                            <li><input type="text" name="gene[dys527b]" value="" /></li>
+                            <li><input type="text" name="gene[dys404s1b]" value='{:session("gene[dys404s1b]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys527a]" value='{:session("gene[dys527a]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[dys527b]" value='{:session("gene[dys527b]","","mobile")}' /></li>
                         </ul>
 					</div>
 		       </div>
@@ -219,6 +219,15 @@
             },1000);
         }
 			
+        $('input').on('keyup paste',function(){
+            var name = $(this).attr('name');
+            var value = $(this).val();
+
+            $.get("{:url('user/set_user_upload_data_cache')}",{'name':name,'value':value},function(data){
+                // console.log(data);
+            },'json');
+
+        })
 		</script>
 	</body>
 
