模板 基因 改变

--- a/application/index/view/index/import_data.html
+++ b/application/index/view/index/import_data.html
@@ -25,7 +25,7 @@
             <div class="gene-data">
                 <h2>导入基因数据</h2>
                 <form action="" target="ajaxR" method="POST" enctype="multipart/form-data">
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <div class="groupl">
                             姓名：
                         </div>
@@ -67,7 +67,7 @@
                                 </select>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="form-group" style="margin-top:20px;">
                         <div class="groupl">
                             文件：
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <a style="float: left;" href="/index/index/online_import_data">在线填写数据</a>
-                    <a href="__STATIC__/基因导入模板.xlsx" download="基因导入模板.xlsx" class="downloadss">下载:基因导入模板.xlsx</a>
+                    <a href="__STATIC__/上传数据标准模板.xlsx" download="上传数据标准模板.xlsx" class="downloadss">下载:上传数据标准模板.xlsx</a>
                     <div class="btn">
                         <button type="submit">确认</button>
                     </div>
