--- a/application/index/view/index/online_import_data.html
+++ b/application/index/view/index/online_import_data.html
@@ -49,11 +49,27 @@
 							<li>频度</li>
 						</ul>
 						<ul class="xiala">
+							<li><input type="text" name="key[]" value="DYF387Sa"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYF387Sb"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
 							<li><input type="text" name="key[]" value="DYS19"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS389I"/></li>
+							<li><input type="text" name="key[]" value="DYS385a"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS385b"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS389a"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
@@ -93,6 +109,10 @@
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS449"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
 							<li><input type="text" name="key[]" value="DYS456"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
@@ -101,35 +121,23 @@
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS635"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="GATA-H4"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS385a"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS385b"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS449"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
 							<li><input type="text" name="key[]" value="DYS460"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS481"/></li>
+							<li><input type="text" name="key[]" value="DYS481a"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS481b"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
 							<li><input type="text" name="key[]" value="DYS518"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS527"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
@@ -149,26 +157,18 @@
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS387S1a"/></li>
+							<li><input type="text" name="key[]" value="DYS635a"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS387S1b"/></li>
+							<li><input type="text" name="key[]" value="DYS635b"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS388"/></li>
+							<li><input type="text" name="key[]" value="GATA_H4"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS444"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS549"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
+                        <!-- <ul class="xiala">
 							<li><input type="text" name="key[]" value="DYS643"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
@@ -191,7 +191,7 @@
                         <ul class="xiala">
 							<li><input type="text" name="key[]" value="DYS527b"/></li>
 							<li><input type="text" name="value[]" /></li>
-                        </ul>
+                        </ul> -->
                     </form>
 					</div>	
 				
