--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -2,14 +2,30 @@
     <div class="left fl">
         <div class="bottomNav">
             <ul>
-                <li><a href="#">基因检测</a></li>
-                <li><a href="#">什么是基因</a></li>
-                <li><a href="{:url('about/index')}">关于我们</a></li>
-                <li><a href="#">联系我们</a></li>
+                    <li><a href="#">首页</a></li>
+                    <li><a href="#">关于族内</a></li>
+                    <li><a href="#">关注/联系</a></li>
+                    <li><a href="#">基因寻祖</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">二维码</a></li>
+                    <li><a href="#">寻根故事</a></li>
+                    <li><a href="#">加入我们</a></li>
+                    <li><a href="#">联系邮箱</a></li>
+                    <li><a href="#">方志家谱</a></li>
+                    <li><a href="#">服务协议</a></li>
+                    <li><a href="#">联系电话</a></li>
+                    <li><a href="#">帮助中心</a></li>
+                    <li><a href="#">顾问委员会</a></li>
+                    <li><a href="#">购买</a></li>
+                    <li><a href="#">隐私保护</a></li>
+                    <li><a href="#">我的</a></li>
             </ul>
         </div>
         <div class="copyright">
-            <p>{$web_setting.icp}</p>
+            <span>@2019族内myroots.All Rights Reserved &nbsp;&nbsp;粤ICP备15012185号<img src="__STATIC__/images/home/jing.png"/></span>
+           
+            <!-- <p class="hao">{$web_setting.icp}</p> -->
+           
         </div>
     </div>
     <div class="code fl">
