--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -45,7 +45,8 @@
                             <h1>已有基因数据？</h1>
                             <p>Y - STR数据<br />检测对比报告</p>
                         </div>
-                        <a href="/index/index/import_data" class="btn">导入数据</a>
+                        <!-- <a href="/index/index/import_data" class="btn" >导入数据</a> -->
+                        <a  class="btn" href="/index/index/information">导入数据</a>
                     </div>
                     <div class="gene-item">
                         <div class="text">
