--- a/public/static/index/css/register/register.css
+++ b/public/static/index/css/register/register.css
@@ -160,6 +160,23 @@
 	font-size: 15px;
 	
 }
+.tips_ear{
+	width: 100%;
+	display: flex;
+	justify-content: center
+}
+.tips_ear .tip{
+
+	color:#CCCCCC;
+	display: inline-block;
+	font-size: 14px;
+	width: 340px;
+	height:40px;
+	line-height: 40px;
+	text-align: right;
+	
+}
+
 
 
 
